--- a/index.html
+++ b/index.html
@@ -11,22 +11,27 @@
 <body>
  <header>
    <h2>JSON-borne</h2>
-   <nav>
-    
+   <nav>    
     <ul>
        <li><a href="index.html">Home</a></li>
        <li><a href="about-us.html">About Us</a></li>
        <li><a href="test.html">Test</a></li>
        <li><a href="results.html">Results</a></li>
-      </ul>
-
+    </ul>
    </nav>
 
  </header> 
  <main>
    <ul id="card-elem">
-     
+    <li id="term1"></li>
+    <li id="def1"></li>
+    <li id="term2"></li>
+    <li id="def2"></li>
+    <li id="term3"></li>
+    <li id="def3"></li>
    </ul>
+   <button id="button" type="submit">Next Card</button>
+
  </main>
  <footer>
   <img src="img/Logo.png" alt="Logo">
