--- a/about-us.html
+++ b/about-us.html
@@ -9,20 +9,32 @@
   <title>About us</title>
 </head>
 <body>
- <header>
-   <h2>About us</h2>
-   <nav>
-     <ul>
-       <li><a href="index.html">Home</a></li>
-       <li><a href="about-us.html">About Us</a></li>
-       <li><a href="test.html">Test</a></li>
-       <li><a href="results.html">Results</a></li>     
-     </ul>
-   </nav>
- </header> 
- <main></main>
+  <header>
+    <h2 id="titleSplash">About Us</h2>
+    <hr>
+    <nav>    
+     <div id="linkBox">
+        <p><a href="index.html">Home</a></p>
+        <p><a href="test.html">Test</a></p>
+        <p><a href="results.html">Results</a></p>
+        <p><a href="about-us.html">About Us</a></p>
+     </div>
+    </nav>
+ <hr>
+  </header> 
+ <main>
+<div id="usPg">
+  <p>Roger</p>
+  <p>Bishal</p>
+  <p>Nathan</p>
+  <p>Michelle</p>
+</div>
+
+ </main>
  <footer>
+  <hr>
   <img src="img/Logo.png" alt="Logo">
+  <hr>
  </footer>
  <script src="JS/app.js"></script>
  <script src="JS/constructor.js"></script>
