--- a/index.html
+++ b/index.html
@@ -10,31 +10,64 @@
 </head>
 <body>
  <header>
-   <h2>JSON-borne</h2>
+   <h2 id="titleSplash">Terminal Development</h2>
+   <hr>
    <nav>    
-    <ul>
-       <li><a href="index.html">Home</a></li>
-       <li><a href="about-us.html">About Us</a></li>
-       <li><a href="test.html">Test</a></li>
-       <li><a href="results.html">Results</a></li>
-    </ul>
+    <div id="linkBox">
+      <p><a href="index.html">Home</a></p>
+      <p><a href="test.html">Test</a></p>
+      <p><a href="results.html">Results</a></p>
+      <p><a href="about-us.html">About Us</a></p>
+    </div>
    </nav>
-
+<hr>
  </header> 
  <main>
-   <ul id="card-elem">
-    <li id="term1"></li>
-    <li id="def1"></li>
-    <li id="term2"></li>
-    <li id="def2"></li>
-    <li id="term3"></li>
-    <li id="def3"></li>
-   </ul>
+   <section id="card-elem">
+         <!--  /* //////////////////card 1 /////////////*/ -->
+         <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <p id="term1"></p>
+            </div>
+            <div class="flip-card-back">
+              <p id="def1"></p>
+            </div>
+          </div>
+        </div>
+
+          <!--  /* //////////////////card 2 /////////////*/ -->
+     <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <p id="term2"></p>
+        </div>
+        <div class="flip-card-back">
+          <p id="def2"></p>
+        </div>
+      </div>
+    </div>
+        <!--  /* //////////////////card 3 /////////////*/ -->
+         <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <p id="term3"></p>
+        </div>
+        <div class="flip-card-back">
+          <p id="def3"></p>
+          
+        </div>
+      </div>
+    </div>
+   </section>
+   <br>
    <button id="button" type="submit">Next Card</button>
 
  </main>
  <footer>
+   <hr>
   <img src="img/Logo.png" alt="Logo">
+  <hr>
  </footer>
  <script src="JS/constructor.js"></script>
  <script src="JS/app.js"></script>
