--- a/test.html
+++ b/test.html
@@ -9,20 +9,24 @@
   <title>Test</title>
 </head>
 <body>
- <header>
-   <h2>Test</h2>
-   <nav>
-     <ul>
-       <li><a href="index.html">Home</a></li>
-       <li><a href="about-us.html">About Us</a></li>
-       <li><a href="test.html">Test</a></li>
-       <li><a href="results.html">Results</a></li>
-     </ul>
-   </nav>
- </header> 
+  <header>
+    <h2 id="titleSplash">Test Development</h2>
+    <hr>
+    <nav>    
+     <div id="linkBox">
+      <p><a href="index.html">Home</a></p>
+      <p><a href="test.html">Test</a></p>
+      <p><a href="results.html">Results</a></p>
+      <p><a href="about-us.html">About Us</a></p>
+     </div>
+    </nav>
+ <hr>
+  </header> 
  <main></main>
  <footer>
-   <img src="img/Logo.png" alt="Logo">
+  <hr>
+  <img src="img/Logo.png" alt="Logo">
+  <hr>
  </footer>
  <script src="JS/app.js"></script>
  <script src="JS/constructor.js"></script>
