initial test form syntax

--- a/test.html
+++ b/test.html
@@ -20,7 +20,26 @@
      </ul>
    </nav>
  </header> 
- <main></main>
+ <main>
+
+  <form id="test-form">
+    <fieldset>
+      <legend id="questionOne">How long is Bishals beard</legend>
+      
+      <input type="radio" id="qOne" name="question1" value="qOne">
+      <label id="radioOne" for="qOne"></label><br>
+      <input type="radio" id="wrongAnswerOne" name="question1" value="wrongAnswerOne">
+      <label for="css">Small</label><br>
+      <input type="radio" id="wrongAnswerTwo" name="question1" value="wrongAnswerTwo">
+      <label for="javascript">Important</label><br>
+      <input type="radio" id="wrongAnswerThree" name="question1" value="wrongAnswerThree">
+      <label for="javascript">other stuff</label><br>
+      <button type="submit">Submit</button>
+
+    </fieldset>
+  </form>
+
+ </main>
  <footer>
    <img src="img/Logo.png" alt="Logo">
  </footer>
