small style changes, added copyright

--- a/index.html
+++ b/index.html
@@ -61,14 +61,18 @@
     </div>
    </section>
    <br>
+   <hr>
    <button id="button" type="submit">Next Card</button>
 
  </main>
  <footer>
    <hr>
   <img src="img/Logo.png" alt="Logo">
-  <hr>
+  
+  <p>&copy JSONBorne_2022 
+   Codefellows 201 Final Class</p>
  </footer>
+ 
  <script src="JS/constructor.js"></script>
  <script src="JS/app.js"></script>
 </body>
