--- a/results.html
+++ b/results.html
@@ -26,7 +26,8 @@
  <footer>
   <hr>
   <img src="img/Logo.png" alt="Logo">
-  <hr>
+  <p>&copy JSONBorne_2022 
+    Codefellows 201 Final Class</p>
  </footer>
  <script src="JS/app.js"></script>
  <script src="JS/constructor.js"></script>
