resized cards, adjusted colors,set footer limits, adjusted pictures,etc

--- a/index.html
+++ b/index.html
@@ -60,17 +60,20 @@
       </div>
     </div>
    </section>
+   
+   <div id="btn-container">
    <br>
-   <hr>
+   
    <button id="button" type="submit">Next Card</button>
+   </div>
 
  </main>
  <footer>
    <hr>
-  <img src="img/Logo.png" alt="Logo">
+  <img id="logo" src="img/Logo.png" alt="Logo">
   
-  <p>&copy JSONBorne_2022 
-   Codefellows 201 Final Class</p>
+  <p id="copyright">&copy JSONBorne_2022 
+    Codefellows 201 Final Class</p>
  </footer>
  
  <script src="JS/constructor.js"></script>
