--- a/test.html
+++ b/test.html
@@ -25,10 +25,9 @@
  <main></main>
  <footer>
   <hr>
-  <img src="img/Logo.png" alt="Logo">
-  <p>&copy JSONBorne_2022 
+  <img id="logo" src="img/Logo.png" alt="Logo">
+  <p id="copyright">&copy JSONBorne_2022 
     Codefellows 201 Final Class</p>
-
  </footer>
  <script src="JS/app.js"></script>
  <script src="JS/constructor.js"></script>
