--- a/about-us.html
+++ b/about-us.html
@@ -24,17 +24,68 @@
   </header> 
  <main>
 <div id="usPg">
-  <p>Roger</p>
-  <p>Bishal</p>
-  <p>Nathan</p>
-  <p>Michelle</p>
+
+  <div id="rog">
+    <img src="img/Wells-0027_remastered.jpg" alt="Roger Pic">
+    <h2>Roger</h2>
+    <hr>
+    <p>Born in the USA, living abroad. Lover of music, cycling, and coffee. Formerly a teacher, currently a developer.</p>
+    <hr>
+    <a href="https://www.linkedin.com/in/roger-s-wells/">Linkedin</a>
+    <br>
+    <a href="https://github.com/rsw359">Github</a>
+
+  </div>
+
+  <div id="bish">
+    <img src="img/Bishal.png" alt="Bishal Pic">
+    <h2>Bishal</h2>
+    <hr>
+    <p>The Man, The Beard, The Legend. What can we say about Bishal that the stories haven't already revealed? Lover of Hello Kitty products and the color fuscia.</p>
+    <hr>
+    <a href="https://www.linkedin.com/in/bishal-khanal/">Linkedin</a>
+    <br>
+    <a href="https://github.com/bkhanal4351">Github</a>
+  </div>
+
+  <div id="nate">
+    <img src="img/image.png" alt="Nathan Pic">
+    <h2>Nathan</h2>
+    <hr>
+    <p>International Man of Mystery. Not one stay in the same place for long, he can be often be found in his luxury houseboat off the shores of Micronesia, or in his summer home L'Chateu Du Picler' in Austria.</p>
+    <hr>
+    <a href="https://www.linkedin.com/in/nathan-waters-l23/">Linkedin</a>
+    <br>
+    <a href="https://github.com/Nathan-Waters">Github</a>
+
+  </div>
+
+  <div id="mish">
+    <img src="img/IMG_1264.jpeg" alt="Michelle Pic">
+    <h2>Michelle</h2>
+    <hr>
+    <p>A woman of many hats. Devoloper, mother, grandmother, part-time wrassler, world renowned grappling champion. Special move: The Salazar Suplex</p>
+    <hr>
+    <a href="https://www.linkedin.com/in/michellesalazar010/">Linkedin</a>
+    <br>
+    <a href="https://github.com/MISalz">Github</a>
+
+  </div>
+
 </div>
 
  </main>
+ <hr>
  <footer>
-  <hr>
-  <img src="img/Logo.png" alt="Logo">
-  <hr>
+  
+  <span>
+  <img id="logo" src="img/Logo.png" alt="Logo">
+  </span>
+  <span>
+  <p id="copyright">&copy JSONBorne_2022 
+    Codefellows 201 Final Class</p>
+  </span>
+  
  </footer>
  <script src="JS/app.js"></script>
  <script src="JS/constructor.js"></script>
