--- a/results.html
+++ b/results.html
@@ -23,10 +23,11 @@
  <hr>
   </header> 
  <main></main>
+ 
  <footer>
   <hr>
-  <img src="img/Logo.png" alt="Logo">
-  <p>&copy JSONBorne_2022 
+  <img id="logo" src="img/Logo.png" alt="Logo">
+  <p id="copyright">&copy JSONBorne_2022 
     Codefellows 201 Final Class</p>
  </footer>
  <script src="JS/app.js"></script>
