test styling started

--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
       <label id="aFour" for="answerFour"></label>
       <br>
 
-      <button type="submit">Submit</button>
+      <button  id = "submit-btn" type="submit">Submit</button>
 
     </fieldset>
   </form>
