added bkgrnd color and padding

--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
  <hr>
   </header> 
 
- <main>
+ <main id="test-main">
 
   <form id="test-form">
     <fieldset>
@@ -56,9 +56,13 @@
 
  <footer>
   <hr>
+
   <img id="logo" src="img/Logo.png" alt="Logo">
   <p id="copyright">&copy JSONBorne_2022 
-    Codefellows 201 Final Class</p>
+    Codefellows 201 Final Class
+  </p>
+
+
  </footer>
  <script src="JS/constructor.js"></script>
  <!-- <script src="JS/app.js"></script> -->
