consolidated the results page and results table

--- a/results.html
+++ b/results.html
@@ -22,7 +22,10 @@
     </nav>
  <hr>
   </header> 
- <main></main>
+
+ <main>
+  <table id="score-table"></table>
+ </main>
  
  <footer>
   <hr>
@@ -30,7 +33,9 @@
   <p id="copyright">&copy JSONBorne_2022 
     Codefellows 201 Final Class</p>
  </footer>
- <script src="JS/app.js"></script>
+ <!-- <script src="JS/app.js"></script> -->
  <script src="JS/constructor.js"></script>
+ <script src="JS/test.js" ></script>
+ <script src="JS/results.js" ></script>
 </body>
 </html>
