--- a/test.html
+++ b/test.html
@@ -23,7 +23,18 @@
  <hr>
   </header> 
 
- <main id="test-main">
+  
+  <main id="test-main">
+    
+    <form id="userName" onsubmit="return false">
+      <fieldset>
+        <p>What is your name?</p>
+        <input type="text" placeholder="Type Your Name Here" id="myInput">
+        <button id="username-Button" type="submit">Submit</button>
+      </fieldset>
+    </form>
+    
+    <div id="newH1"></div>
 
   <form id="test-form">
     <fieldset>
