--- a/test.html
+++ b/test.html
@@ -28,9 +28,9 @@
     
     <form id="userName" onsubmit="return false">
       <fieldset>
-        <p>What is your name?</p>
+        <p>Enter your name</p>
         <input type="text" placeholder="Type Your Name Here" id="myInput">
-        <button id="username-Button" type="submit">Submit</button>
+        <button id="username-Button" type="submit">Enter</button>
       </fieldset>
     </form>
     
