--- a/about-us.html
+++ b/about-us.html
@@ -49,7 +49,7 @@
   </div>
 
   <div id="nate">
-    <img src="img/image.png" alt="Nathan Pic">
+    <img src="img/Nathan.png" alt="Nathan Pic">
     <h2>Nathan</h2>
     <hr>
     <p>International Man of Mystery. Not one stay in the same place for long, he can be often be found in his luxury houseboat off the shores of Micronesia, or in his summer home L'Chateu Du Picler' in Austria.</p>
@@ -61,7 +61,7 @@
   </div>
 
   <div id="mish">
-    <img src="img/IMG_1264.jpeg" alt="Michelle Pic">
+    <img src="img/Michelle.jpeg" alt="Michelle Pic">
     <h2>Michelle</h2>
     <hr>
     <p>A woman of many hats. Devoloper, mother, grandmother, part-time wrassler, world renowned grappling champion. Special move: The Salazar Suplex</p>
