cleaned up our code

--- a/test.html
+++ b/test.html
@@ -29,7 +29,7 @@
     <form id="userName" onsubmit="return false">
       <fieldset>
         <p>What is your name?</p>
-        <input type="text" placeholder="Type Your Name Here" id="myInput">
+        <input type="text" placeholder="Type Your Name Here" id="myInput" required>
         <button id="username-Button" type="submit">Submit</button>
       </fieldset>
     </form>
